2013-04-18  Elliott Baron  <ebaron@redhat.com>

	* Makefile.am:
	(ICEDTEA_PATCHES): Add new patch.
	* patches/object-factory-cl-internal.patch:
	Patch to give xalan/xerces access to their own internal
	packages.

2013-04-17  Andrew John Hughes  <gnu.andrew@redhat.com>

	* ChangeLog:
	Move Elliott's entry to correct position.
	* Makefile.am:
	(ICEDTEA_PATCHES): Fix path to previous patch.
	* patches/openjdk/jaxws-tempfiles-ioutils-6.patch:
	Moved from here to...
	* patches/jaxws-tempfiles-ioutils-6.patch:
	...here as not an upstream OpenJDK patch.

2013-04-17  Elliott Baron  <ebaron@redhat.com>

	* patches/openjdk/jaxws-tempfiles-ioutils-6.patch:
	Restrict temp file permissions.
	* Makefile.am:
	(ICEDTEA_PATCHES): Added new patch.

2013-04-17  Andrew John Hughes  <gnu.andrew@redhat.com>

	* patches/aarch64.patch:
	Fix to apply against older HotSpot.

2013-04-17  Andrew John Hughes  <gnu.andrew@redhat.com>

	PR1402: Support glibc < 2.17 with AArch64 patch
	* patches/aarch64.patch:
	Define EM_AARCH64 for legacy systems
	with glibc earlier than 2.17.

2013-04-17  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* patches/openjdk/6669869-Beans_isDesignTime_should_be_per-AppContext.patch:
	Reapplied as a security patch pre-requisite.
	* patches/security/20130201/8001235.patch:
	Dropped as included in JAXP tarball used.
	* INSTALL: Remove --with-{jaxp,jaf,jaxws}-drop-zip documentation.
	* Makefile.am:
	(JAXWS_DROP_URL): Removed.
	(JAXWS_DROP_ZIP): Likewise.
	(JAXWS_DROP_SHA256SUM): Likewise.
	(JAF_DROP_URL): Likewise.
	(JAF_DROP_ZIP): Likewise.
	(JAF_DROP_SHA256SUM): Likewise.
	(JAF_DROP_URL): Likewise.
	(JAXP_DROP_URL): Likewise.
	(JAXP_DROP_ZIP): Likewise.
	(JAXP_DROP_SHA256SUM): Likewise.
	(DROP_PATCHES): Add patches providing code
	previously provided by drop zips.
	(SECURITY_PATCHES): Updated.
	(ICEDTEA_PATCHES): Add DROP_PATCHES.  Remove
	6669869 duplicate.
	(ICEDTEA_ENV): Remove ALT_DROPS_DIR.
	(download-jaxp-drop): Removed.
	(clean-download-jaxp-drop): Likewise.