@@ -1,3 +1,8 @@
+2013-04-19  Jiri Vanek  <jvanek@redhat.com>
+
+	* patches/security/20130416/8007667.patch:
+	Fix patch format to apply on RHEL 5.
+
 2013-04-18  Elliott Baron  <ebaron@redhat.com>
 
 	* Makefile.am:
